[package]
name = "wireguard_exporter"
version = "0.1.0"
edition = "2021"
authors = [
	"Kevin K. <kbknapp@gmail.com>",
]
description = "A Prometheus exporter for WireGuard"
repository = "https://github.com/kbknapp/wireguard_exporter"
keywords = [
	"prometheus",
	"wireguard",
	"exporter",
	"prometheus_exporter",
]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "kbknapp/wireguard_exporter" }
is-it-maintained-open-issues = { repository = "kbknapp/wireguard_exporter" }
maintenance = {status = "actively-developed"}

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.5"
prometheus = "0.13.0"
prometheus-hyper = "0.1.2"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.3.1"

[build-dependencies]
clap = "3.0.0-beta.5"
